Agregado 'Sharpe Ratio' a las funciones de backtest

--- a/notebooks/2.Feature_engeeniering_&_initial_backtest.ipynb
+++ b/notebooks/2.Feature_engeeniering_&_initial_backtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "id": "d13c4d9e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "5b5b840a",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "c5236218",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "[3 rows x 30 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "c0a4dd04",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "217c0f07",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d573f120",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9ca899f0",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e290dc3b",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "575da135",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "aadf3abf",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
    "source": [
     "def backtest_dca_plus_trading_WITH_SL(df, price_col='close', \n",
     "                                    signal_col='signal_ema_price',monthly_invest=200, \n",
-    "                                    trade_amount=50,take_profit_pct=0.10, stop_loss_pct=-0.05, \n",
+    "                                    trade_amount=50,take_profit_pct=0.125, stop_loss_pct=-0.05, \n",
     "                                    date_col='date', initial_trading_cash=1000, \n",
     "                                    verbose=True):\n",
     "    \"\"\"\n",
@@ -558,7 +558,6 @@
     "    \n",
     "    Parte de una inversion inicial en la cual ira jugando con ese capital para hacer estas inversiones de modo que con el tiempo este capital se recupere \n",
     "    y el inversor solo trabaje con el dinero generado con la estrategia, de modo que el riesto sobre el capital propio se vea reducido a 0 y este sea el producido por el mismo sistema. \n",
-    "    \n",
     "    \"\"\"\n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    \n",
@@ -569,6 +568,8 @@
     "    trading_contributions = 0\n",
     "    trading_pnl = 0\n",
     "    last_month = None\n",
+    "    portfolio_values = []\n",
+    "    daily_returns = []\n",
     "\n",
     "    for i, row in df.iterrows():\n",
     "        current_price = row[price_col]\n",
@@ -596,11 +597,27 @@
     "            cash -= trade_amount\n",
     "            trading_contributions += trade_amount\n",
     "            open_trades.append({'buy_price': current_price, 'shares': shares_bought})\n",
-    "            \n",
+    "        \n",
+    "        # Calculate daily portfolio value\n",
+    "        current_portfolio_value = cash + (dca_shares * current_price) + sum(t['shares'] * current_price for t in open_trades)\n",
+    "        portfolio_values.append(current_portfolio_value)\n",
+    "        \n",
+    "        # Calculate daily returns\n",
+    "        if len(portfolio_values) > 1:\n",
+    "            daily_return = (portfolio_values[-1] - portfolio_values[-2]) / portfolio_values[-2]\n",
+    "            daily_returns.append(daily_return)\n",
     "    \n",
+    "    # Calculate Sharpe Ratio\n",
+    "    if len(daily_returns) > 0:\n",
+    "        risk_free_rate = 0.02  # 2% annual risk-free rate\n",
+    "        daily_rf_rate = (1 + risk_free_rate) ** (1/252) - 1\n",
+    "        excess_returns = [r - daily_rf_rate for r in daily_returns]\n",
+    "        sharpe_ratio = (np.mean(excess_returns) * np.sqrt(252)) / (np.std(excess_returns) if np.std(excess_returns) > 0 else float('inf'))\n",
+    "    else:\n",
+    "        sharpe_ratio = 0\n",
+    "            \n",
     "    final_price = df[price_col].iloc[-1]\n",
     "    dca_value = dca_shares * final_price\n",
-    "    \n",
     "    \n",
     "    open_trades_at_end = len(open_trades)\n",
     "    value_of_open_trades = sum(trade['shares'] * final_price for trade in open_trades)\n",
@@ -619,14 +636,16 @@
     "        'Trading PnL': trading_pnl,\n",
     "        'Trading Capital Used': trading_contributions,\n",
     "        'Open Trades at End': open_trades_at_end,\n",
-    "        'Value of Open Trades': value_of_open_trades\n",
+    "        'Value of Open Trades': value_of_open_trades,\n",
+    "        'Sharpe Ratio': sharpe_ratio\n",
     "    }\n",
     "    \n",
     "    if verbose:\n",
     "        print(f\"Resultados para: {signal_col} (Con SL)\")\n",
     "        print(f\"Retorno Porcentual: {percentage_return:.2f}%\")\n",
     "        print(f\"Posiciones Abiertas al Final: {open_trades_at_end}\")\n",
-    "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\\n\")\n",
+    "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\")\n",
+    "        print(f\"Sharpe Ratio: {sharpe_ratio:.2f}\\n\")\n",
     "\n",
     "    return results"
    ]
@@ -652,6 +671,8 @@
     "    \"\"\"\n",
     "    df[date_col] = pd.to_datetime(df[date_col])\n",
     "    cash, dca_shares, open_trades, total_dca_contributions, trading_contributions, trading_pnl, last_month = initial_trading_cash, 0, [], 0, 0, 0, None\n",
+    "    portfolio_values = []\n",
+    "    daily_returns = []\n",
     "    \n",
     "    for i, row in df.iterrows():\n",
     "        current_price, current_date = row[price_col], row[date_col]\n",
@@ -689,7 +710,24 @@
     "                'stop_loss_price': stop_loss_price,\n",
     "                'take_profit_price': take_profit_price\n",
     "            })\n",
-    "            \n",
+    "        \n",
+    "        # Calculate daily portfolio value\n",
+    "        current_portfolio_value = cash + (dca_shares * current_price) + sum(t['shares'] * current_price for t in open_trades)\n",
+    "        portfolio_values.append(current_portfolio_value)\n",
+    "        \n",
+    "        # Calculate daily returns\n",
+    "        if len(portfolio_values) > 1:\n",
+    "            daily_return = (portfolio_values[-1] - portfolio_values[-2]) / portfolio_values[-2]\n",
+    "            daily_returns.append(daily_return)\n",
+    "    \n",
+    "    # Calculate Sharpe Ratio\n",
+    "    if len(daily_returns) > 0:\n",
+    "        risk_free_rate = 0.02  # 2% annual risk-free rate\n",
+    "        daily_rf_rate = (1 + risk_free_rate) ** (1/252) - 1\n",
+    "        excess_returns = [r - daily_rf_rate for r in daily_returns]\n",
+    "        sharpe_ratio = (np.mean(excess_returns) * np.sqrt(252)) / (np.std(excess_returns) if np.std(excess_returns) > 0 else float('inf'))\n",
+    "    else:\n",
+    "        sharpe_ratio = 0\n",
     "    \n",
     "    final_value = cash + (dca_shares * df[price_col].iloc[-1]) + sum(t['shares'] * df[price_col].iloc[-1] for t in open_trades)\n",
     "    final_contributions = total_dca_contributions + initial_trading_cash\n",
@@ -698,17 +736,25 @@
     "    open_trades_at_end = len(open_trades)\n",
     "    value_of_open_trades = sum(trade['shares'] * df[price_col].iloc[-1] for trade in open_trades)\n",
     "    \n",
-    "    result = {'Strategy': f\"{signal_col} (ATR Stops)\", 'Final Portfolio Value': final_value, \n",
-    "            'Total Contributions': final_contributions, 'Absolute Return': absolute_return, \n",
-    "            'Percentage Return': percentage_return, 'Trading PnL': trading_pnl, \n",
-    "            'Trading Capital Used': trading_contributions, 'Open Trades at End': open_trades_at_end, \n",
-    "            'Value of Open Trades': value_of_open_trades}\n",
+    "    result = {\n",
+    "        'Strategy': f\"{signal_col} (ATR Stops)\", \n",
+    "        'Final Portfolio Value': final_value, \n",
+    "        'Total Contributions': final_contributions, \n",
+    "        'Absolute Return': absolute_return, \n",
+    "        'Percentage Return': percentage_return, \n",
+    "        'Trading PnL': trading_pnl, \n",
+    "        'Trading Capital Used': trading_contributions, \n",
+    "        'Open Trades at End': open_trades_at_end, \n",
+    "        'Value of Open Trades': value_of_open_trades,\n",
+    "        'Sharpe Ratio': sharpe_ratio\n",
+    "    }\n",
     "    \n",
     "    if verbose: \n",
     "        print(f\"Resultados para: {signal_col} (Con SL)\")\n",
     "        print(f\"Retorno Porcentual: {percentage_return:.2f}%\")\n",
     "        print(f\"Posiciones Abiertas al Final: {open_trades_at_end}\")\n",
-    "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\\n\")\n",
+    "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\")\n",
+    "        print(f\"Sharpe Ratio: {sharpe_ratio:.2f}\\n\")\n",
     "        \n",
     "    return result\n",
     "    "
@@ -739,6 +785,8 @@
     "    trading_contributions = 0\n",
     "    trading_pnl = 0\n",
     "    last_month = None\n",
+    "    daily_returns = []\n",
+    "    portfolio_values = []\n",
     "\n",
     "    for i, row in df.iterrows():\n",
     "        current_price = row[price_col]\n",
@@ -766,11 +814,27 @@
     "            cash -= trade_amount\n",
     "            trading_contributions += trade_amount\n",
     "            open_trades.append({'buy_price': current_price, 'shares': shares_bought})\n",
-    "            \n",
+    "        \n",
+    "        \n",
+    "        current_portfolio_value = cash + (dca_shares * current_price) + sum(trade['shares'] * current_price for trade in open_trades)\n",
+    "        portfolio_values.append(current_portfolio_value)\n",
+    "        \n",
+    "        \n",
+    "        if len(portfolio_values) > 1:\n",
+    "            daily_return = (portfolio_values[-1] - portfolio_values[-2]) / portfolio_values[-2]\n",
+    "            daily_returns.append(daily_return)\n",
     "\n",
     "    final_price = df[price_col].iloc[-1]\n",
     "    dca_value = dca_shares * final_price\n",
     "    \n",
+    "    # Calculate Sharpe Ratio\n",
+    "    if len(daily_returns) > 0:\n",
+    "        risk_free_rate = 0.02 \n",
+    "        daily_rf_rate = (1 + risk_free_rate) ** (1/252) - 1\n",
+    "        excess_returns = [r - daily_rf_rate for r in daily_returns]\n",
+    "        sharpe_ratio = (np.mean(excess_returns) * np.sqrt(252)) / (np.std(excess_returns) if np.std(excess_returns) > 0 else float('inf'))\n",
+    "    else:\n",
+    "        sharpe_ratio = 0\n",
     "\n",
     "    open_trades_at_end = len(open_trades)\n",
     "    value_of_open_trades = sum(trade['shares'] * final_price for trade in open_trades)\n",
@@ -789,7 +853,8 @@
     "        'Trading PnL': trading_pnl,\n",
     "        'Trading Capital Used': trading_contributions,\n",
     "        'Open Trades at End': open_trades_at_end,    \n",
-    "        'Value of Open Trades': value_of_open_trades\n",
+    "        'Value of Open Trades': value_of_open_trades,\n",
+    "        'Sharpe Ratio': sharpe_ratio\n",
     "    }\n",
     "    \n",
     "    if verbose:\n",
@@ -797,13 +862,19 @@
     "        print(f\"Retorno Porcentual: {percentage_return:.2f}%\")\n",
     "        print(f\"Posiciones Abiertas al Final: {open_trades_at_end}\")\n",
     "        print(f\"Valor de Posiciones Abiertas: ${value_of_open_trades:,.2f}\\n\")\n",
+    "        print(f\"Valor Final de la Cartera: ${final_value:,.2f}\")\n",
+    "        print(f\"Trading PnL: ${trading_pnl:,.2f}\")\n",
+    "        print(f\"Capital Usado en Trading: ${trading_contributions:,.2f}\")\n",
+    "        print(f\"Sharpe Ratio: {sharpe_ratio:.2f}\\n\")\n",
+    "        print(f\"Total DCA Shares: {dca_shares:.4f}\")\n",
+    "        print(f\"Total DCA Contributions: ${total_dca_contributions + initial_trading_cash:,.2f}\\n\")\n",
     "\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9f0c6e10",
    "metadata": {},
    "outputs": [],
@@ -843,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "49d840a6",
    "metadata": {},
    "outputs": [],
@@ -893,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "65c38891",
    "metadata": {},
    "outputs": [
@@ -923,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "id": "4b92e8ec",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "id": "7dc99665",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "id": "231b92e7",
    "metadata": {},
    "outputs": [
@@ -1420,6 +1491,7 @@
        "      <th>Trading Capital Used</th>\n",
        "      <th>Open Trades at End</th>\n",
        "      <th>Value of Open Trades</th>\n",
+       "      <th>Sharpe Ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1434,6 +1506,7 @@
        "      <td>17100</td>\n",
        "      <td>8</td>\n",
        "      <td>1256.484045</td>\n",
+       "      <td>1.607162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1446,6 +1519,7 @@
        "      <td>4050</td>\n",
        "      <td>1</td>\n",
        "      <td>148.410903</td>\n",
+       "      <td>1.615560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1458,6 +1532,7 @@
        "      <td>3750</td>\n",
        "      <td>1</td>\n",
        "      <td>154.037366</td>\n",
+       "      <td>1.616137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1470,6 +1545,7 @@
        "      <td>3150</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1482,6 +1558,7 @@
        "      <td>1800</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615422</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1494,6 +1571,7 @@
        "      <td>300</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1506,6 +1584,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1518,6 +1597,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1530,6 +1610,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.615625</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1558,16 +1639,27 @@
        "7                68200    121775.883362         178.557014     0.000000   \n",
        "8                68200    121775.883362         178.557014     0.000000   \n",
        "\n",
-       "   Trading Capital Used  Open Trades at End  Value of Open Trades  \n",
-       "0                 17100                   8           1256.484045  \n",
-       "1                  4050                   1            148.410903  \n",
-       "2                  3750                   1            154.037366  \n",
-       "3                  3150                   0              0.000000  \n",
-       "4                  1800                   0              0.000000  \n",
-       "5                   300                   0              0.000000  \n",
-       "6                     0                   0              0.000000  \n",
-       "7                     0                   0              0.000000  \n",
-       "8                     0                   0              0.000000  "
+       "   Trading Capital Used  Open Trades at End  Value of Open Trades  \\\n",
+       "0                 17100                   8           1256.484045   \n",
+       "1                  4050                   1            148.410903   \n",
+       "2                  3750                   1            154.037366   \n",
+       "3                  3150                   0              0.000000   \n",
+       "4                  1800                   0              0.000000   \n",
+       "5                   300                   0              0.000000   \n",
+       "6                     0                   0              0.000000   \n",
+       "7                     0                   0              0.000000   \n",
+       "8                     0                   0              0.000000   \n",
+       "\n",
+       "   Sharpe Ratio  \n",
+       "0      1.607162  \n",
+       "1      1.615560  \n",
+       "2      1.616137  \n",
+       "3      1.615538  \n",
+       "4      1.615422  \n",
+       "5      1.615953  \n",
+       "6      1.615625  \n",
+       "7      1.615625  \n",
+       "8      1.615625  "
       ]
      },
      "metadata": {},
@@ -1633,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "id": "7db4ca4d",
    "metadata": {},
    "outputs": [],
@@ -1657,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "id": "d0dc0cc5",
    "metadata": {},
    "outputs": [],
@@ -1668,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "id": "a6c728e6",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1980,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3ca0a7a9",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "id": "b5567840",
    "metadata": {},
    "outputs": [],
